--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -12,8 +12,9 @@
     <string name="action_settings">Settings</string>
     <string name="logout">Logout</string>
     <string name="title_activity_friend_list">FriendListActivity</string>
-    <string name="large_text">
+    <string name="large_text"></string>
     <string name="error_init_failure">Can\'t play the video</string>
+        <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
         "Material is the metaphor.\n\n"
 
         "A material metaphor is the unifying theory of a rationalized space and a system of motion."
@@ -101,7 +102,7 @@
         "On the layout level, design your app layout to minimize opportunities for interference. "
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
-    </string>
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
