--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">HIIT</string>
+    <string name="stop">STOP</string>
+    <string name="start">START</string>
 </resources>
