--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -113,5 +113,6 @@
     <string name="title_activity_frd">frdActivity</string>
     <string name="title_activity_chat_room">ChatRoomActivity</string>
     <string name="title_activity_chatting">chattingActivity</string>
+    <string name="title_activity_profile">ProfileActivity</string>
 
 </resources>
